compiler/testData/diagnostics/tests/redeclarations/MultiFilePackageRedeclaration.kt
// FILE: _.kt
package a
class <!REDECLARATION!>b<!> {}
// FILE: _.kt
package a.<!REDECLARATION!>b<!>
// FILE: _.kt
package a.<!REDECLARATION!>b<!>